--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^6.22.0"
   },
-  "browsersList": ["last 2 versions"]
+  "browsersList": [
+    "last 2 versions"
+  ]
 }
