--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "parcel": "^2.16.1"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^4.1.17"
   },
   "browsersList": [
     "last 2 versions"
